# FinancialEconometrics

./: .gitignore  README.md  homework3.r
homeworks/: pyproject.toml
homeworks/homework01/: Submission.7z  homework 1_answer sheet_finecon.docx  homework01.ipynb  homework01.py  homework01_cleanup.ipynb  homework01_cleanup.py  s1_data_hw.csv  s1_data_hw.xlsx
homeworks/homework02/: PS2 answer sheet.docx  homework02.ipynb  homework02.py  s2_data.csv  s2_data.txt
homeworks/homework03/: ar_residual_autocorrelation_intuition.md  homework03.ipynb  homework03.py  s3_answer_sheet.docx
homeworks/homework04/: MLE_(G)ARCH_intuition.md  MLE_Intution.md  PS4_answer_sheet-2.docx  PS4_answer_sheet-submit.docx  homework04.ipynb  homework04.py
homeworks/homework05/: PS5_answer_sheet-submit-3.docx  homework05.ipynb  homework05.py  panel_data_intuition.md  s5_data.txt
lab/01_Exercise01/: potus_by_party.txt  s1.R
lab/lab01/: s1.R  s1_data.txt
labs/: labs_summary.md
labs/lab01/: homework 1_answer sheet_finecon.docx
labs/lab02/: s2.R  s2_data.txt  ~$2 answer sheet.docx
labs/lab03/: s3.R  s3_data.txt
labs/lab04/: s4.R
labs/lab05/: s5.R
